Feat: use case 4 purchase, fix: some UI fix

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <script defer src="https://www.paypal.com/sdk/js?client-id=AbrEVdhtZnCsoeK29snTAU_KQUXEbN7JW3liAVb8VQgrG4E3AuMUG_Tgjl3DhmkgYdgCjca6UZYI6U_8&currency=MYR"></script>
+
 </head>
 <body>
   <app-root></app-root>
